# ship_intention_inference

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_inserting_ais_intention_model.md  bayesian_network.h  classified_south.csv  forgetting_maneuvers_intention_model_two_ships.xdsl  geometry.h  identifiers.h  insert_ais  insert_ais.cpp  intention_model.h  intention_model_combined.xdsl  intention_model_combined_discretized.xdsl  intention_model_combined_discretized_old_colreg_complinat.xdsl  intention_model_combined_old_colregs_complint.xdsl  intention_model_from_code.xdsl  intention_model_parameters.yaml  intention_model_with_risk_of_collision.xdsl  intention_model_with_risk_of_collision_continious.xdsl  intention_model_with_risk_of_collision_no_startpoint.xdsl  intention_model_with_risk_of_collision_no_startpoint_2.xdsl  modified_network.xdsl  parameters.h  utils.h  west_rel.csv
files/: input_ready_Case - 01-08-2021, 08-21-29 - AQ5VM-60-sec-two-ships-radius-300.csv  new_1_Case - 05-09-2018, 02-26-49 - HQJ86-60-sec.csv  new_1_Case - 07-09-2019, 05-52-22 - O7LU9-60-sec.csv  new_1_Case - 07-18-2019, 05-46-19 - W6ZUC-60-sec.csv  new_1_Case - 08-09-2018, 19-12-24 - 4XJ3B-60-sec.csv  new_1_Case - 09-17-2018, 18-24-32 - 0URFX-60-sec.csv  new_2_Case - 09-17-2018, 18-24-32 - 0URFX-60-sec.csv  new_Case - 01-10-2018, 11-23-38 - 9W6K5-60-sec.csv  new_Case - 01-12-2018, 03-56-43 - WRNUL-60-sec 2.csv  new_Case - 01-12-2018, 03-56-43 - WRNUL-60-sec.csv  new_Case - 02-01-2018, 15-50-25 - C1401-60-sec.csv  new_Case - 02-04-2019, 20-56-55 - OTFKY-60-sec.csv  (+26 more)
(+465 files in other folders)
